fixed binary in CPP_00:ex00, fixed cpplint in ex00

--- a/CPP_00./ex00/Makefile
+++ b/CPP_00./ex00/Makefile
@@ -13,7 +13,7 @@ OBJ := $(SRC:%.cpp=%.o)
 
 RM := rm -rf
 
-CPPLINT := cpplint *.hpp *.cpp
+CPPLINT := cpplint *.cpp
 
 CPPLINT_CFG := CPPLINT.cfg
 CPPLINT_CFG_DIR := ../cpplint/CPPLINT.cfg
